# note-template

./: README.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/behavioral_rewards/: Cargo.toml
pallets/gdnft/: Cargo.toml
pallets/gdnft/src/: lib.rs  tests.rs  weights.rs
pallets/grandao/: Cargo.toml
pallets/grandao/src/: config.rs  lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: gdnft.rs  lib.rs
