[package]
name = 'pallet-gdnft'
version = '3.0.0'
authors = ['GD Developers']
edition = '2018'

[dependencies]
serde = { version = '1.0.119', optional = true }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
enumflags2 = { version = '0.6.3' }
sp-std = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-proxy = { default-features = false, version = '3.0.0' }

orml-traits = { default-features = false, version = '0.4.0' }
orml-nft = { default-features = false, version = '0.4.0' }

[dev-dependencies]
sp-io = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-utility = { default-features = false, version = '3.0.0' }
orml-tokens = { default-features = false, version = '0.4.0' }
orml-currencies = { default-features = false, version = '0.4.0' }

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'enumflags2/serde',
	'sp-std/std',
	'sp-runtime/std',
	'frame-support/std',
	'frame-system/std',
	'orml-traits/std',
	'orml-nft/std',
	'pallet-timestamp/std',
	'pallet-proxy/std',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
